index.html: changed the explore button styling to avoid contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ input[type="radio"] {
     text-align: center;
     font-size: 20px;
     font-weight: 800;
-    color: var(--btc-orange);
+    color: var(--btc-grey);
     border-radius: 5px;
     background-color: var(--btc-white);
     opacity: 0;
